# Filtomatic

./: CMakeLists.txt  README.md
img/: face_detect_vid.avi
include/: faceDetect.h  filter.h
src/: faceDetect.cpp  filter.cpp  imgDisplay.cpp  vidDisplay.cpp
